# IPCS

./: CMakeLists.txt  Dockerfile  README.md  run.py
app/: CMakeLists.txt  main.cpp
app/TaskManager/core/: Task.h  TaskExecutor.cpp  TaskManager.h
pkg/TaskManager/: CMakeLists.txt
pkg/TaskManager/core/: Task.cpp  TaskExecutor.h  TaskManager.cpp
